[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llsf-dl-mlsmote"
version = "1.0.0"
description = "Hybrid approach combining LLSF-DL with MLSMOTE for handling tail labels in multi-label classification"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Prady029"}
]
maintainers = [
    {name = "Prady029"}
]
keywords = [
    "machine-learning",
    "multi-label",
    "classification", 
    "imbalanced-learning",
    "tail-labels",
    "mlsmote",
    "llsf-dl"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "joblib>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "isort>=5.9.0"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0"
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0"
]

[project.scripts]
llsf-dl-mlsmote = "evaluate:main"

[project.urls]
Homepage = "https://github.com/Prady029/LLSF_DL-MLSMOTE-Hybrid-for-handling-tail-labels"
Documentation = "https://github.com/Prady029/LLSF_DL-MLSMOTE-Hybrid-for-handling-tail-labels/blob/main/README.md"
Repository = "https://github.com/Prady029/LLSF_DL-MLSMOTE-Hybrid-for-handling-tail-labels"
"Bug Tracker" = "https://github.com/Prady029/LLSF_DL-MLSMOTE-Hybrid-for-handling-tail-labels/issues"

[tool.setuptools]
package-dir = {"" = "python_src"}

[tool.setuptools.packages.find]
where = ["python_src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["algorithms", "utils", "config"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=python_src",
    "--cov-report=html",
    "--cov-report=term-missing"
]
